# erp42_racing_ros

./: README.md  docker_build.sh
docker/: docker_run.sh
src/erp42_racing_bringup/: CMakeLists.txt  README.md  package.xml
src/erp42_racing_bringup/config/: erp42_racing_bringup.param.yaml
src/erp42_racing_bringup/launch/: erp42_racing_bringup.launch.py
src/erp42_racing_cmake/: CMakeLists.txt  package.xml
src/erp42_racing_cmake/cmake/: erp42_racing_cmake_config_extras.cmake
src/erp42_racing_description/: CMakeLists.txt  README.md  package.xml
src/erp42_racing_description/launch/: vehicle_description.launch.py
src/erp42_racing_description/meshes/: erp42_racing_bumper.dae  erp42_racing_rear_rim.dae
src/erp42_racing_description/rviz/: vehicle_description.rviz
src/erp42_racing_description/urdf/: erp42_racing.urdf  erp42_racing.xacro  erp42_racing_front_wheel.xacro  erp42_racing_model.xacro  erp42_racing_rear_wheel.xacro
src/erp42_racing_gazebo/: CMakeLists.txt  README.md  package.xml
src/erp42_racing_gazebo/config/: erp42_racing_gazebo.param.yaml  gazebo.param.yaml
src/erp42_racing_gazebo/include/erp42_racing_gazebo/: gazebo_bridge.hpp
src/erp42_racing_gazebo/launch/: erp42_racing_gazebo.launch.py  gazebo.launch.py
src/erp42_racing_gazebo/node/: gazebo_bridge_node.cpp
src/erp42_racing_gazebo/rviz/: erp42_racing_gazebo.rviz
src/erp42_racing_gazebo/src/: gazebo_bridge.cpp
src/erp42_racing_gazebo/urdf/: erp42_racing_gazebo.urdf  erp42_racing_gazebo.xacro  erp42_racing_gazebo_control.xacro
src/erp42_racing_gazebo/worlds/: empty.world
src/erp42_racing_gui/: CMakeLists.txt  README.md  package.xml
src/erp42_racing_gui/node/: control_panel_node.cpp  feedback_monitor_node.cpp
src/erp42_racing_gui/src/: control_panel.cpp  feedback_monitor.cpp
src/erp42_racing_gui/ui/: control_panel.ui  feedback_monitor.ui
src/erp42_racing_msgs/: CMakeLists.txt  README.md  package.xml
src/erp42_racing_msgs/msg/: ControlCommand.msg  Feedback.msg
src/erp42_racing_msgs/srv/: ModeCommand.srv
src/erp42_racing_rqt_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/erp42_racing_rqt_plugin/src/: control_panel_plugin.cpp  feedback_monitor_plugin.cpp
src/erp42_racing_rqt_plugin/ui/: control_panel.ui  feedback_monitor.ui
src/erp42_racing_serial/: CMakeLists.txt  README.md  package.xml
src/erp42_racing_serial/config/: erp42_racing_serial_bridge.param.yaml  serial_bridge.param.yaml
src/erp42_racing_util/: CMakeLists.txt  package.xml
src/erp42_racing_util/include/erp42_racing_util/: exception.hpp  log.hpp
src/erp42_racing_util/src/: log.cpp
(+13 files in other folders)
