<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>erp42_racing_gazebo</name>
    <version>0.0.0</version>
    <description>ERP42 Racing ROS2 gazebo simulation package</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author email="mgkilprg@gmail.com">Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>erp42_racing_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>rclcpp_components</depend>
    <depend>rclcpp           </depend>
    <depend>nav_msgs         </depend>
    <depend>sensor_msgs      </depend>
    <depend>geometry_msgs    </depend>
    <depend>gazebo_msgs      </depend>

    <depend>erp42_racing_util       </depend>
    <depend>erp42_racing_msgs       </depend>
    <depend>erp42_racing_description</depend>

    <!-- Execution dependencies -->
    <exec_depend>xacro          </exec_depend>
    <exec_depend>gazebo_ros     </exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>